package com.holddie.design.pattern.p1creation.c03abstractFactory;

/**
 * @author yangze1
 * @version 1.0.0
 * @email holddie@163.com
 * @date 2018/5/23 9:26
 */
public class ChineseTubeLight implements ITubeLight {
    @Override
    public void switchOn() {

    }

    @Override
    public void switchOff() {

    }

    @Override
    public void turnOn() {

    }
}
