package com.holddie.design.pattern.p1creation.c03abstractFactory;

/**
 * @author yangze1
 * @version 1.0.0
 * @email holddie@163.com
 * @date 2018/5/23 9:23
 */
public interface ITubeLight {
    void switchOn();

    void switchOff();

    void turnOn();
}
